dont know what I'm doing

--- a/web_app/main/templates/main/index.html
+++ b/web_app/main/templates/main/index.html
@@ -3,6 +3,8 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
-    <h1>{{ title }}</h1>
-    <p>Описание главной страницы</p>
+    <h1>Введите слово</h1>
+    <form method="POST">
+        {% csrf_token %}
+    </form>
 {% endblock %}
